Fix heart in footer being too big

--- a/Website/Public/html/css/site.css
+++ b/Website/Public/html/css/site.css
@@ -70,6 +70,7 @@ html, body { height: 100% }
 
 /* Weird classes used literally once but should look fancy in html */
 .pb-2px { padding-bottom: 2px !important }
+.fs-1rem { font-size: 1rem !important }
 
 /* embedresponsively */
 .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
